--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,11 +4,17 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#098a5a" />
     <meta
-      name="description"
-      content="treadlite"
+      name="theme-color"
+      content="#098a5a"
+      media="(prefers-color-scheme: light)"
     />
+    <meta
+      name="theme-color"
+      content="#272727"
+      media="(prefers-color-scheme: dark)"
+    />
+    <meta name="description" content="treadlite" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
